--- a/.github/workflows/merge_pull_request.yml
+++ b/.github/workflows/merge_pull_request.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types: [closed]
 
+env:
+  KOSLI_ORG: kosli
+  KOSLI_FLOW: loancalculator
+  KOSLI_CLI_VERSION: "2.11.6"
+
 jobs:
   on-merge:
     name: Run on merge
@@ -13,6 +18,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Setup cli client
+        uses: kosli-dev/setup-cli-action@v2
+        with:
+          version: ${{ env.KOSLI_CLI_VERSION }}
 
       - name: Report jira ticket from branch name to kosli
         env:
