Added some more debugging

--- a/.github/workflows/merge_pull_request.yml
+++ b/.github/workflows/merge_pull_request.yml
@@ -20,6 +20,8 @@ jobs:
           KOSLI_JIRA_API_TOKEN: ${{ secrets.KOSLI_JIRA_API_TOKEN }}
         run: |
           set -x
+          echo "github.head_ref: ${{ github.head_ref }}"
+          git branch
           JIRA_EXISTS=""
           kosli attest jira \
             --name jira \
