--- a/.github/workflows/merge_pull_request.yml
+++ b/.github/workflows/merge_pull_request.yml
@@ -7,6 +7,7 @@ on:
 env:
   KOSLI_ORG: kosli
   KOSLI_FLOW: loancalculator
+  KOSLI_TRAIL: ${{ github.sha }}
   KOSLI_CLI_VERSION: "2.11.6"
 
 jobs:
