--- a/.github/workflows/merge_pull_request.yml
+++ b/.github/workflows/merge_pull_request.yml
@@ -8,7 +8,7 @@ env:
   KOSLI_ORG: kosli
   KOSLI_FLOW: loancalculator
   KOSLI_TRAIL: ${{ github.sha }}
-  KOSLI_CLI_VERSION: "2.11.6"
+  KOSLI_CLI_VERSION: "2.11.7"
 
 jobs:
   on-merge:
@@ -25,28 +25,15 @@ jobs:
         with:
           version: ${{ env.KOSLI_CLI_VERSION }}
 
-      - name: Report jira ticket from branch name to kosli
+      - name: Report jira ticket to kosli
         env:
           KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
           KOSLI_JIRA_API_TOKEN: ${{ secrets.KOSLI_JIRA_API_TOKEN }}
         run: |
-          set -x
-          echo "github.head_ref: ${{ github.head_ref }}"
-          git branch
-          JIRA_EXISTS=""
           kosli attest jira \
             --name jira \
             --jira-base-url https://kosli-team.atlassian.net \
             --jira-username tore@kosli.com \
             --jira-api-token ${KOSLI_JIRA_API_TOKEN} \
-            --jira-issue-fields "summary" \
-            --assert --dry-run 2>&1 | grep "no Jira references are found" && JIRA_EXISTS=false || JIRA_EXISTS=true
-          
-          if [ "${JIRA_EXISTS}" == "true" ]; then
-            kosli attest jira \
-              --name jira \
-              --jira-base-url https://kosli-team.atlassian.net \
-              --jira-username tore@kosli.com \
-              --jira-api-token ${KOSLI_JIRA_API_TOKEN} \
-              --jira-issue-fields "summary,description,creator"            
-          fi
+            --jira-secondary-source ${{ github.head_ref }} \
+            --jira-issue-fields "summary,description,creator"
