--- a/.github/workflows/merge_pull_request.yml
+++ b/.github/workflows/merge_pull_request.yml
@@ -36,4 +36,4 @@ jobs:
             --jira-username tore@kosli.com \
             --jira-api-token ${KOSLI_JIRA_API_TOKEN} \
             --jira-secondary-source ${{ github.head_ref }} \
-            --jira-issue-fields "summary,description,creator"
+            --jira-issue-fields "summary,description"
