--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -2,6 +2,9 @@ name: 1/3 Main Pipeline
 
 on:
   push:
+    workflows: [ "Kosli base reporting" ]
+    types:
+      - completed
 
 env:
   KOSLI_ORG: kosli
