--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -1,8 +1,8 @@
 name: 1/3 Main Pipeline
 
 on:
-  push:
-    workflows: [ "Kosli base reporting" ]
+  workflow_run:
+    workflows: ["Kosli base reporting"]
     types:
       - completed
 
