--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -2,9 +2,9 @@ name: 1/3 Main Pipeline
 
 on:
   workflow_run:
-    workflows: ["Kosli base reporting"]
-    types:
-      - completed
+    workflows: ['Kosli base reporting']
+    types: [completed]
+    branches: ['*']
 
 env:
   KOSLI_ORG: kosli
