--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -1,7 +1,10 @@
 name: 1/3 Main Pipeline
 
 on:
-  push:
+  workflow_run:
+    workflows: ['Kosli base reporting']
+    types: [completed]
+    branches: ['*']
 
 env:
   KOSLI_ORG: kosli
