--- a/.github/workflows/merge_pull_request.yml
+++ b/.github/workflows/merge_pull_request.yml
@@ -20,22 +20,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-#      - name: Setup cli client
-#        if: ${{ github.event.pull_request.merged == true }}
-#        uses: kosli-dev/setup-cli-action@v2
-#        with:
-#          version: ${{ env.KOSLI_CLI_VERSION }}
-#
-#      - name: Report jira ticket to kosli
-#        if: ${{ github.event.pull_request.merged == true }}
-#        env:
-#          KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
-#          KOSLI_JIRA_API_TOKEN: ${{ secrets.KOSLI_JIRA_API_TOKEN }}
-#        run: |
-#          kosli attest jira \
-#            --name jira \
-#            --jira-base-url https://kosli-team.atlassian.net \
-#            --jira-username tore@kosli.com \
-#            --jira-api-token ${KOSLI_JIRA_API_TOKEN} \
-#            --jira-secondary-source ${{ github.head_ref }} \
-#            --jira-issue-fields "summary,description"
+      - name: Setup cli client
+        if: ${{ github.event.pull_request.merged == true }}
+        uses: kosli-dev/setup-cli-action@v2
+        with:
+          version: ${{ env.KOSLI_CLI_VERSION }}
+
+      - name: Report jira ticket to kosli
+        if: ${{ github.event.pull_request.merged == true }}
+        env:
+          KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
+          KOSLI_JIRA_API_TOKEN: ${{ secrets.KOSLI_JIRA_API_TOKEN }}
+        run: |
+          kosli attest jira \
+            --name jira \
+            --jira-base-url https://kosli-team.atlassian.net \
+            --jira-username tore@kosli.com \
+            --jira-api-token ${KOSLI_JIRA_API_TOKEN} \
+            --jira-secondary-source ${{ github.head_ref }} \
+            --jira-issue-fields "summary,description"
