--- a/.github/workflows/composites/kosli-base-reporting/action.yml
+++ b/.github/workflows/composites/kosli-base-reporting/action.yml
@@ -6,7 +6,7 @@ name: Kosli base reporting
 #   https://developer.atlassian.com/cloud/jira/platform/rest/v2/api-group-issues/#api-rest-api-2-issue-issueidorkey-get-request
 
 
-inputs:
+#inputs:
   # The Following environment variables must be set in your GitHub action
   # before using this composite
   # env:
