--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -11,6 +11,7 @@ env:
   KOSLI_TRAIL: ${{ github.sha }}
   KOSLI_CLI_VERSION: "2.11.7"
   IMAGE_NAME: merkely/loancalculator
+  KOSLI_JIRA_API_TOKEN: ${{ secrets.KOSLI_JIRA_API_TOKEN }}
 
 jobs:
   build:
@@ -24,31 +25,31 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Kosli base reporting
-        if: ${{ env.PR_CLOSE_EVENT }}
+        if: ${{ env.PR_CLOSE_EVENT == 'true' }}
         uses: ./.github/workflows/composites/kosli-base-reporting
         
 
       - name: Add Docker image names to GITHUB_ENV
-        if: ${{ env.PUSH_EVENT }}
+        if: ${{ env.PUSH_EVENT == 'true' }}
         run: |
           echo "IMAGE_TAGGED=${{ env.IMAGE_NAME }}:$(git log -1 --pretty=%h)" >> ${GITHUB_ENV}
           echo "IMAGE_LATEST=${{ env.IMAGE_NAME }}:latest" >> ${GITHUB_ENV}
 
 
       - name: Setup cli client
-        if: ${{ env.PUSH_MAIN_EVENT }}
+        if: ${{ env.PUSH_MAIN_EVENT == 'true' }}
         uses: kosli-dev/setup-cli-action@v2
         with:
           version: ${{ env.KOSLI_CLI_VERSION }}
 
 
       - name: Set up Docker Buildx
-        if: ${{ env.PUSH_EVENT }}
+        if: ${{ env.PUSH_EVENT == 'true' }}
         uses: docker/setup-buildx-action@v1
 
 
       - name: Login to DockerHub
-        if: ${{ env.PUSH_EVENT }}
+        if: ${{ env.PUSH_EVENT == 'true' }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_DEPLOY_USERNAME }}
@@ -56,7 +57,7 @@ jobs:
 
 
       - name: Build and push Docker image
-        if: ${{ env.PUSH_EVENT }}
+        if: ${{ env.PUSH_EVENT == 'true' }}
         id: docker_build
         uses: docker/build-push-action@v2
         with:
@@ -70,14 +71,14 @@ jobs:
 
       - name: Make the image digest available for following steps
         id: digest-prep
-        if: ${{ env.PUSH_MAIN_EVENT }}
+        if: ${{ env.PUSH_MAIN_EVENT == 'true' }}
         run: |
           ARTIFACT_SHA=$( echo ${{ steps.docker_build.outputs.digest }} | sed 's/.*://')
           echo "KOSLI_FINGERPRINT=$ARTIFACT_SHA" >> ${GITHUB_ENV}
 
 
       - name: Log Docker image in Kosli
-        if: ${{ env.PUSH_MAIN_EVENT }}
+        if: ${{ env.PUSH_MAIN_EVENT == 'true' }}
         env:
           KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
         run:
@@ -85,7 +86,7 @@ jobs:
 
 
       - name: Run unit tests
-        if: ${{ env.PUSH_EVENT }}
+        if: ${{ env.PUSH_EVENT == 'true' }}
         run: |
           # Write results to ./build/test/
           docker run \
@@ -98,7 +99,7 @@ jobs:
 
 
       - name: Log unit test results in Kosli
-        if: ${{ env.PUSH_MAIN_EVENT }}
+        if: ${{ env.PUSH_MAIN_EVENT == 'true' }}
         env:
           KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
         run:
@@ -108,7 +109,7 @@ jobs:
 
 
       - name: Run coverage
-        if: ${{ env.PUSH_EVENT }}
+        if: ${{ env.PUSH_EVENT == 'true' }}
         run: |
           # Write summary to build/coverage/coverage_summary.sh
           mkdir -p build/coverage
@@ -122,7 +123,7 @@ jobs:
 
 
       - name: Log coverage results in Kosli
-        if: ${{ env.PUSH_MAIN_EVENT }}
+        if: ${{ env.PUSH_MAIN_EVENT == 'true' }}
         env:
           KOSLI_API_TOKEN: ${{ secrets.KOSLI_API_TOKEN }}
         run:
@@ -131,7 +132,7 @@ jobs:
             --name coverage
 
       - name: Deploy to staging
-        if: ${{ env.PUSH_MAIN_EVENT }}
+        if: ${{ env.PUSH_MAIN_EVENT == 'true' }}
         run: |
           echo YOUR DEPLOYMENT COMMAND HERE
 
