--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -134,6 +134,14 @@ jobs:
         if: ${{ env.PUSH_EVENT == 'true' }}
         run: |
           set -x
+          
+          kosli attest jira \
+            --name jira \
+            --jira-base-url https://kosli-team.atlassian.net \
+            --jira-username tore@kosli.com \
+            --jira-api-token ${KOSLI_JIRA_API_TOKEN} \
+            --assert --dry-run
+          
           kosli attest jira \
             --name jira \
             --jira-base-url https://kosli-team.atlassian.net \
