--- a/.github/workflows/master_pipeline.yml
+++ b/.github/workflows/master_pipeline.yml
@@ -20,7 +20,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
-
     steps:
       - uses: actions/checkout@v2
       
@@ -38,7 +37,7 @@ jobs:
 
 
       - name: Setup cli client
-        if: ${{ env.PUSH_MAIN_EVENT == 'true' }}
+        if: ${{ env.PUSH_EVENT == 'true' }}
         uses: kosli-dev/setup-cli-action@v2
         with:
           version: ${{ env.KOSLI_CLI_VERSION }}
@@ -130,6 +129,17 @@ jobs:
         if: ${{ env.PUSH_MAIN_EVENT == 'true' }}
         run: |
           echo YOUR DEPLOYMENT COMMAND HERE
+
+      - name: Assert jira ticket
+        if: ${{ env.PUSH_EVENT == 'true' }}
+        run: |
+          kosli attest jira \
+            --name jira \
+            --jira-base-url https://kosli-team.atlassian.net \
+            --jira-username tore@kosli.com \
+            --jira-api-token ${KOSLI_JIRA_API_TOKEN} \
+            --assert --dry-run 2>&1 | grep "no Jira references are found" && exit 1 || exit 0
+
 
 #      - name: Log deployment to staging in Kosli
 #        run:
